snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.md5
9faaad4771118b10f2069dc6b37c167d